--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Game shop - A sua loja de games</title>
 </head>
 <body>
+    <header>
+        <dir>
+
+        </dir>
+
+    </header>
+    <main>
+        <section>
+
+        </section>
+
+    </main>
+    <footer>
+        <dir>
+            
+        </dir>
+    </footer>
     
 </body>
 </html>
