--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <header>
-        <dir>
-
-        </dir>
+        <h1> </h1>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
 
     </header>
     <main>
@@ -21,7 +25,7 @@
     </main>
     <footer>
         <dir>
-            
+
         </dir>
     </footer>
     
