--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
 </head>
 <body>
     <header>
-        <h1> </h1>
-        <nav>
-            <ul>
-                <li></li>
-                <li></li>
-            </ul>
-        </nav>
-
+        <div class="container">
+            <h1>GAME SHOP </h1>
+            <nav>
+                <ul>
+                    <li><a href="#">SOBRE A LOJA</a></li>
+                    <li><a href="#">CONTATO</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
+        <section>
+            
+
+        </section>
         <section>
 
         </section>
@@ -25,7 +30,9 @@
     </main>
     <footer>
         <dir>
+            <h3>
 
+            </h3>
         </dir>
     </footer>
     
