--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Game shop - A sua loja de games</title>
 </head>
 <body>
@@ -20,7 +23,29 @@
     </header>
     <main>
         <section>
-            
+            <div class="container">
+                <img class="store_front" src="images\loja.jpg" alt="Fachada da loja">
+                <div>
+                    <h2>Sobre a Loja</h2>
+                    <p>
+                        Descubra o Mundo dos Games na Game Shop!
+                    </p>
+                    <p>
+                        Bem-vindo ao seu destino definitivo para tudo relacionado a jogos! Localizada no centro da cidade, nossa loja é o paraíso dos gamers, oferecendo uma vasta seleção das melhores marcas e produtos para satisfazer todas as suas necessidades de entretenimento eletrônico.
+                    </p> 
+                    <p> 
+                        Na Game Shop, você encontra os produtos das marcas mais renomadas do universo dos games. Se você é fã da Nintendo, da Xbox ou de outras marcas líderes, garantimos que temos os últimos lançamentos e itens exclusivos para você. Desde os consoles mais recentes até os jogos mais procurados, oferecemos uma variedade de produtos que atendem a todos os gostos e orçamentos.
+                    </p>
+                    <p>
+                        Nosso estoque inclui as últimas versões dos consoles Nintendo Switch e Xbox Series X/S, além de uma gama completa de jogos para todas as plataformas. Se você está atrás daquele título recém-lançado ou um clássico imperdível, você certamente encontrará o que procura em nossas prateleiras.
+                    </p>
+                    <ul class="brands_list">
+                        <li><img src="images/nintendo.png" alt="logo da Nitendo"></li>
+                        <li><img src="images/xbox.png" alt="logo da xbox"></li>
+                        <li><img src="images/playstation.png" alt="logo da playstation"></li>
+                    </ul>
+                </div>
+            </div>
 
         </section>
         <section>
